another way to create default thread or platform thread